--- a/loginOrSignup.html
+++ b/loginOrSignup.html
@@ -3,10 +3,12 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Access</title>
+<link rel="stylesheet" href="loginOrSignupcss.css">
 </head>
 
 <body>
-
-<p> <a href="signupClient.html">Sign up</a>. </body>
-<p> <a href="Access.html">Log in</a>. </body>
+ <form class="box" action="Access.html" method="post">
+ 	<input type="submit" value="login">
+ 	<input type="submit" value="signup">
+</form>
 </html>
