--- a/loginClient.html
+++ b/loginClient.html
@@ -3,11 +3,16 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>login</title>
+<link rel="stylesheet" href="loginClientcss.css">
 </head>
+
 <body>
-<form action="loginClient.jsp" method="post">
-E-mail id :<input type="text" name="email" /><br>
-password :<input type="password" name="password"/><br>
-<input type="submit" /> </form>
+<form class="box" action="loginClient.jsp" method="post">
+<h1>Login</h1>
+<input type="text" name="email" placeholder="E-mail" />
+<input type="password" name="password" placeholder="password"/><br>
+<input type="submit" name="" value="Login" /> 
+</form>
 </body>
+
 </html>
