--- a/loginAdmin.html
+++ b/loginAdmin.html
@@ -3,10 +3,11 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>login</title>
+<link rel="stylesheet" href="loginAdmincss.css">
 </head>
 <body>
-<form action="loginAdmin.jsp" method="post">Please Enter Admin's Password<br>
-password :<input type="password" name="password"/><br>
-<input type="submit" /> </form>
+<form class="box" action="loginAdmin.jsp" method="post"><h2>Please Enter Admin's Password</h2>
+<input type="password" name="password" placeholder="password"/>
+<input type="submit" name="" value="Login"/> </form>
 </body>
 </html>
