--- a/adminHome.html
+++ b/adminHome.html
@@ -3,11 +3,18 @@
         <title>Admin Homepage</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="adminhomecss.css">
     </head>
     
     <body>
-         <a href="adminHome.html">Home</a> 
-         <a href="logout.jsp">Logout</a>
-        <h1>welcome admin!!</h1>
+        <div class="topnav" id="myTopnav">
+        <a href="adminHome.html">Home</a> 
+        <a href="#news">Customers</a>
+        <a href="#contact">Customer Requirements</a>
+        <a href="#Productstatus">Product Status</a>
+        <a href="#Inventory">Inventory</a>
+        <a href="#Dealers">Dealers</a>
+        <a href="logout.jsp">Logout</a>
+        </div>
     </body>
 </html>
