--- a/clientHome.html
+++ b/clientHome.html
@@ -1,15 +1,18 @@
 <html>
-    <head>
+<head>
         <title>Homepage</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="homecss.css">
     </head>
     <body>
-         <a href="clientHome.html">Home</a> 
-         <a href="productStatus.html">Order history</a>
-         <a href="products.html">Products</a>
-         <a href="aboutus.html">About us</a>
-         <a href="logout.jsp">Logout</a>
-           
+        <div class="topnav" id="myTopnav">
+        <a href="clientHome.html">Home</a> 
+        <a href="products.html">Products</a>
+        <a href="productStatus.html">Product Status</a>
+        <a href="aboutus.html">About us</a>
+        <a href="logout.jsp">Logout</a>
+        </div>           
     </body>
 </html>
+
