--- a/adminHome.html
+++ b/adminHome.html
@@ -3,7 +3,7 @@
         <title>Admin Homepage</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="adminhomecss.css">
+        <link rel="stylesheet" href="homecss.css">
     </head>
     
     <body>
