--- a/Access.html
+++ b/Access.html
@@ -3,10 +3,13 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Access</title>
+<link rel="stylesheet" href="Accesscss.css">
 </head>
 
 <body>
-
-<p> <a href="loginClient.html">Log in as client</a>. </body>
-<p> <a href="loginAdmin.html">Log in as admin</a>. </body>
+<form class="box" method="post">
+<h1>Login</h1>
+<a href="loginAdmin.html">Login as Admin</a><br><br>
+<a href="loginClient.html">Login as Client</a>
+</form>
 </html>
