--- a/loginOrSignup.html
+++ b/loginOrSignup.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
- <form class="box" action="Access.html" method="post">
- 	<input type="submit" value="login">
- 	<input type="submit" value="signup">
+ <form class="box" method="post">
+ 	<a href="Access.html">Login </a><br><br>
+	<a href="Signup.html">Signup</a>
 </form>
 </html>
