--- a/adminHome.html
+++ b/adminHome.html
@@ -9,9 +9,9 @@
     <body>
         <div class="topnav" id="myTopnav">
         <a href="adminHome.html">Home</a> 
-        <a href="#news">Customers</a>
-        <a href="#contact">Customer Requirements</a>
-        <a href="#Productstatus">Product Status</a>
+        <a href="#customers">Customers</a>
+        <a href="#customerRequirements">Customer Requirements</a>
+        <a href="#productStatus">Product Status</a>
         <a href="#Inventory">Inventory</a>
         <a href="#Dealers">Dealers</a>
         <a href="logout.jsp">Logout</a>
