--- a/client home page/client home page.html
+++ b/client home page/client home page.html
@@ -36,8 +36,11 @@
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 body, html {
   height: 100%;
+  background-color:#e8e8e8;
+  border-color: black;
   color: black;
-  line-height: 1.8;
+  background-size: 50px;
+  line-height: 2;
 }
 
 /* Create a Parallax Effect */
@@ -60,7 +63,7 @@ body, html {
   }
 }
 </style>
-<body bgcolor = white >
+<body bgcolor = black >
 
 
 
@@ -82,9 +85,10 @@ body, html {
       <i class="fa fa-bars"></i>
     </a>
     <a href="#home" class="w3-bar-item w3-button"> </i>HOME</a>
-    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT US</a>
+  <a href="#contact" class="w3-bar-item w3-button w3-hide-small">  ABOUT US</a>
     <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"></i>ORDER </a>
-    <a href="#contact" class="w3-bar-item w3-button w3-hide-small"> HISTORY</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-hide-small">   
+      <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i>HISTORY</a>
     <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PRODUCTS</a>
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"> LOGOUT</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
@@ -234,7 +238,7 @@ body, html {
 
 
     <div class="w3-col m3">
-<button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
+<button class="w3-button w3-padding-large w3-dark-grey" style="margin-top:64px">LOAD MORE</button>
   </div>
 
     </div>
@@ -314,7 +318,7 @@ body, html {
 
 
     <div class="w3-col m3">
-<button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">          LOAD MORE</button>
+<button class="w3-button w3-padding-large w3-dark-grey" style="margin-top:64px">          LOAD MORE</button>
   </div>
 </div>
 
@@ -380,7 +384,7 @@ body, html {
 
 
     <div class="w3-col m3">
-<button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">          LOAD MORE</button>
+<button class="w3-button w3-padding-large w3-dark-grey" style="margin-top:64px">          LOAD MORE</button>
   </div>
 
     </div>
@@ -423,10 +427,15 @@ body, html {
  
 
   
+<br><br><br>
 
-<img src="white.png">
     
-<h1>TRENDING DEALS</h1>
+<h1>
+    <div class="w3-col m3">
+<button class="w3-button w3-padding-large w3-red w3-hover-black" style="margin-top:64px">      TRENDING DEALS</button>
+  </div>
+
+    </div></h1>
   
 
   
@@ -438,7 +447,7 @@ body, html {
 <br><br>
 <div class=" price-col col-lg-4 col-md-6">
 
-<div class="card"><br>
+<div class="card">
       <div class="card-header">
       
         <h3>Electronics</h3>
