--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Access</title>
-<link rel="stylesheet" href="loginOrSignupcss.css">
+<link rel="stylesheet" href="indexcss.css">
 </head>
 
 <body>
