--- a/scms-web/loginOrSignup.html
+++ b/scms-web/loginOrSignup.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 <meta charset="ISO-8859-1">
+
 <title>Supply Chain Management System</title>
-</head>
 
 <style>
 body{
  margin:0;
  padding:0;
  font-family: sans-serif;
- background-image:url("sleekworkspace.jpg");
+ background:#333;
 }
 
 .box{
@@ -53,12 +54,47 @@ background:#2ecc71;
 .box a:hover,.box a:active {
   background-color:#2ecc71;
 }
-</style>
 
-	
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  margin-top: 125px;
+  margin-left:50px;
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+</style>
+</head>
+
 <body>
- <form class="box" method="post">
- 	<a href="Access.html">Login </a><br><br>
+
+<div class="row">
+ 
+  <div class="column">
+    <img src="ChainedCoLogo.jpg" alt="ChainedCoLogo" style="width:100%">
+  </div>
+ 
+  <div class="column">
+   <form class="box" method="post">
+ 	<a href="Access.html">Login</a><br><br>
 	<a href="Signup.html">Signup</a>
-</form>
+   </form>
+  </div>
+ 
+ </div>
+
+ 
+
+</body>
 </html>
